--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "typescript": "^4.4.2"
+  },
+  "dependencies": {
+    "@vercel/node": "^1.12.1"
   }
 }
